[package]
name = "cluster-lend"
version = "0.1.0"
description = "Clusterfi lending program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cluster_lend"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-client = { version = "0.28.0" }
anchor-spl = { version = "0.28.0", features = ["dex", "token"] }
pyth-sdk-solana = "0.9.0"
bytemuck = "1.15.0"

derivative = "2.2.0"
num_enum = "0.7.0"
fixed = { version = "1.23.1" }
fixed-macro = "1.1"
uint = "0.9.5"
arrayref = { version = "0.3.6", optional = true }
strum = { git = "https://github.com/hubbleprotocol/strum", features = [
    "derive",
], branch = "checked_arithmetics" }
static_assertions = "1.1.0"
