[package]
name = "cluster-lend"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cluster_lend"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
arrayref = "0.3.7"
bitflags = "2.5.0"
bytemuck = "1.16.0"
fixed = { version = "1.23.1" }
fixed-macro = "1.1"
uint = "0.9.5"

num_enum = "0.7.2"
strum = "0.26.2"
